--- a/common/taskfiles/podman.tasks.yml
+++ b/common/taskfiles/podman.tasks.yml
@@ -2,17 +2,21 @@ version: "3"
 
 vars:
   IMAGE_TAG: '{{.IMAGE_TAG | default "latest"}}'
+  COMPUTED_IMAGE: '{{.IMAGE | default (printf "%s:%s" .IMAGE_NAME .IMAGE_TAG)}}'
 
 tasks:
   build:
-    desc: Build the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+    desc: Build the '{{.COMPUTED_IMAGE}}' image
     summary: |
-      Build the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+      Build the '{{.COMPUTED_IMAGE}}' image
 
       This task builds the container image defined in {{.CONTAINERFILE}}.
 
       Variables:
+        - IMAGE_NAME: Provide the image name, required.
+        - CONTAINERFILE: Provide the path to the Containerfile, required.
         - IMAGE_TAG: Provide the image tag, defaults to `latest`.
+        - IMAGE: Provide the full image tag, defaults to a `IMAGE_NAME:IMAGE_TAG`.
         - PODMAN_OPTS: Optionally provide options for the `podman build` command.
     requires:
       vars:
@@ -20,13 +24,10 @@ tasks:
         - CONTAINERFILE
     vars:
       FORMAT: '{{.FORMAT | default "oci"}}'
-      # TODO: Allow overriding IMAGE
-      #IMAGE: "{{default .IMAGE (print .IMAGE_NAME \":\" .IMAGE_TAG)}}"
-      #IMAGE: '{{.IMAGE | default ({{.IMAGE_NAME:.IMAGE_TAG}})}}'
     cmds:
       - podman build .
         --file {{.CONTAINERFILE}}
-        --tag {{.IMAGE_NAME}}:{{.IMAGE_TAG}}
+        --tag {{.COMPUTED_IMAGE}}
         --format {{.FORMAT}}
         {{.PODMAN_OPTS}}
       - task: test
@@ -35,15 +36,17 @@ tasks:
     #   the container.
 
   test:
-    desc: Test the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+    desc: Test the '{{.COMPUTED_IMAGE}}' image
     summary: |
-      Test the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+      Test the '{{.COMPUTED_IMAGE}}' image
 
       This task tests that software defined in {{.EXPECTED_CONFIG}} is executable
       and installed in the right version.
 
       Variables:
+        - IMAGE_NAME: Provide the image name, required.
         - IMAGE_TAG: Provide the image tag, defaults to `latest`.
+        - IMAGE: Provide the full image tag, defaults to a `IMAGE_NAME:IMAGE_TAG`.
     requires:
       vars:
         - IMAGE_NAME
@@ -51,7 +54,7 @@ tasks:
     cmds:
       - bash common/scripts/check-versions.sh
         {{.EXPECTED_CONFIG}}
-        {{.IMAGE_NAME}}:{{.IMAGE_TAG}}
+        {{.COMPUTED_IMAGE}}
     preconditions:
       - sh: which yq
         msg: The `yq` CLI is required to run this task.
@@ -70,30 +73,38 @@ tasks:
       - echo "TODO, tagging? Pushing?"
 
   debug:
-    desc: Debug the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+    desc: Debug the '{{.COMPUTED_IMAGE}}' image
     summary: |
-      Debug the '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+      Debug the '{{.COMPUTED_IMAGE}}' image
 
       This task runs the container image and mounts the repository root into the
       the container. The working dir is set to this mounted folder.
 
       Variables:
+        - IMAGE_NAME: Provide the image name, required.
+        - IMAGE_TAG: Provide the image tag, defaults to `latest`.
+        - IMAGE: Provide the full image tag, defaults to a `IMAGE_NAME:IMAGE_TAG`.
         - PODMAN_OPTS: Optionally provide options for the `podman run` command.
     requires:
       vars:
         - IMAGE_NAME
     cmds:
-      # TODO: Allow debugging an intermediary image via IMAGE_ID
       - podman run
         --rm -it
         --volume .:/repo
         --workdir /repo
         {{.PODMAN_OPTS}}
-        {{.IMAGE_NAME}}:{{.IMAGE_TAG}}
+        {{.COMPUTED_IMAGE}}
     interactive: true
 
   wsl:
-    desc: Build a WSL distro from '{{.IMAGE_NAME}}:{{.IMAGE_TAG}}' image
+    desc: Build a WSL distro from '{{.COMPUTED_IMAGE}}' image
+    summary: |
+      Build a WSL distro from '{{.COMPUTED_IMAGE}}' image
+
+      This task builds a WSL distro based on the '{{.COMPUTED_IMAGE}}' image.
+      The resulting tar archive can be imported on a Windows system with WSL
+      installed.
     requires:
       vars:
         - IMAGE_NAME
@@ -105,7 +116,7 @@ tasks:
       - |
         set -o pipefail
         NAME={{.IMAGE_NAME}}-export-$(date +%s)
-        podman run --name $NAME --tty {{.IMAGE_NAME}}:{{.IMAGE_TAG}} ls / > /dev/null
+        podman run --name $NAME --tty {{.COMPUTED_IMAGE}} ls / > /dev/null
         ID=$(podman ps --all | grep -i $NAME | awk '{ print $1 }')
         mkdir -p build
         podman export --output {{.ROOTFS_TAR}} $ID
@@ -114,7 +125,7 @@ tasks:
       - test -f {{.ROOTFS_TAR}}
       # Task is up-to-date if container image is older than build artifact
       - |
-        image_creation_time_utc=$(podman inspect {{.IMAGE_NAME}}:{{.IMAGE_TAG}} --format '{{`{{.Created}}`}}' \
+        image_creation_time_utc=$(podman inspect {{.COMPUTED_IMAGE}} --format '{{`{{.Created}}`}}' \
           | cut -d. -f1 \
           | xargs -I{} date -u -d {} +%s)
         build_creation_time_utc=$(TZ=UTC stat -c %Y {{.ROOTFS_TAR}})
@@ -124,5 +135,5 @@ tasks:
         msg: The `podman` CLI is required to run this task.
       - sh: which awk
         msg: The `awk` CLI is required to run this task.
-      - sh: podman image exists {{.IMAGE_NAME}}:{{.IMAGE_TAG}}
-        msg: The `{{.IMAGE_NAME}}:{{.IMAGE_TAG}}` image does not exist. Have you built it already?
+      - sh: podman image exists {{.COMPUTED_IMAGE}}
+        msg: The `{{.COMPUTED_IMAGE}}` image does not exist. Have you built it already?
