--- a/images/dev/Containerfile
+++ b/images/dev/Containerfile
@@ -28,6 +28,7 @@ RUN set -xe; \
     gitk \
     iproute2 \
     jq \
+    locales \
     lsb-release \
     pipx \
     podman \
@@ -46,6 +47,7 @@ RUN set -xe; \
     zip \
     zsh \
     ; \
+  locale-gen en_US.UTF-8; \
   ln -sf /usr/bin/batcat /usr/bin/bat; \
   ln -sf /usr/bin/python3 /usr/bin/python; \
   # Prepare for systemd support in WSL
@@ -55,6 +57,8 @@ RUN set -xe; \
     | bash -s install deb-get; \
   deb-get install du-dust; \
   apt-get clean;
+
+ENV LANG=en_US.UTF-8
 
 ENV PIPX_HOME=/opt/pipx
 ENV PIPX_BIN_DIR=/usr/local/bin
