--- a/images/dev/Containerfile
+++ b/images/dev/Containerfile
@@ -22,6 +22,7 @@ RUN set -xe; \
     containers-storage \
     curl \
     duf \
+    fontconfig \
     fuse-overlayfs \
     git \
     git-lfs \
@@ -71,6 +72,7 @@ RUN set -xe; \
   pipx install poetry; \
   pipx install tmuxp; \
   bash /tmp/scripts/install-scc.sh; \
+  bash /tmp/scripts/install-fonts.sh; \
   sh -c "$(curl --location https://taskfile.dev/install.sh)"; \
   sh -c "$(curl -fsLS get.chezmoi.io)" -- -b /usr/local/bin; \
   # TODO: Single place for versions, which can be used to test the image later
