--- a/images/dev/versions.yml
+++ b/images/dev/versions.yml
@@ -42,3 +42,5 @@ software:
     check_command: helm version --client
   - name: talosctl
     check_command: talosctl version --client
+  - name: cilium
+    check_command: cilium version --client
