--- a/images/dev/Containerfile
+++ b/images/dev/Containerfile
@@ -77,6 +77,7 @@ RUN set -xe; \
   bash /tmp/scripts/install-kubectl.sh v1.30.0; \
   bash /tmp/scripts/install-clusterctl.sh 1.7.1; \
   bash /tmp/scripts/install-cilium.sh; \
+  bash /tmp/scripts/install-kubeseal.sh; \
   curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash; \
   curl -s https://fluxcd.io/install.sh | bash; \
   curl -sL https://talos.dev/install | sh; \
