--- a/images/dev/versions.yml
+++ b/images/dev/versions.yml
@@ -46,3 +46,4 @@ software:
     check_command: talosctl version --client
   - name: cilium
     check_command: cilium version --client
+  - name: kubeseal
