--- a/images/dev/versions.yml
+++ b/images/dev/versions.yml
@@ -20,6 +20,7 @@ software:
   - name: tmux
     check_command: tmux -V
   - name: tmuxp
+  - name: vale
   - name: vim
   - name: wget
   - name: yq
