--- a/images/dev/Containerfile
+++ b/images/dev/Containerfile
@@ -24,6 +24,7 @@ RUN \
     git \
     git-lfs \
     gitk \
+    graphviz \
     inetutils-ping \
     iproute2 \
     jq \
@@ -31,6 +32,7 @@ RUN \
     locales \
     lsb-release \
     make \
+    openjdk-21-jdk \
     pipx \
     podman \
     python3 \
@@ -69,6 +71,8 @@ RUN set -xe; \
   bash /tmp/scripts/install-dust.sh; \
   bash /tmp/scripts/install-vale.sh; \
   bash /tmp/scripts/install-fonts.sh; \
+  bash /tmp/scripts/install-plantuml.sh; \
+  bash /tmp/scripts/install-structurizr.sh; \
   curl -fsSL https://d2lang.com/install.sh | sh -s --; \
   sh -c "$(curl --location https://taskfile.dev/install.sh)"; \
   sh -c "$(curl -fsLS get.chezmoi.io)" -- -b /usr/local/bin; \
