--- a/images/dev/Containerfile
+++ b/images/dev/Containerfile
@@ -15,6 +15,7 @@ RUN \
   apt-get install --yes --no-install-recommends \
     bat \
     btop \
+    build-essential \
     ca-certificates \
     containers-storage \
     curl \
