--- a/images/dev/versions.yml
+++ b/images/dev/versions.yml
@@ -10,6 +10,7 @@ software:
     check_command: /bin/zsh --login -c '[ -f ~/.zshrc ] && . ~/.zshrc; zoxide --version'
 
   - name: curl
+  - name: dive
   - name: duf
   - name: dust
   - name: git
